<resources>
    <string name="app_name">What_To_Watch</string>
    <string name="intro">"Don't know what to watch?"</string>
    <string name="into2">"Let me give you a suggestion!"</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">"Go!"</string>
    <string name="btn2">"browse"</string>
    <string name="title">"What's it gonna be?"</string>

    <string name="imdb">"IMDb's Highest Rated</string>
    <string name="movieTitle1">"The Godfather"</string>
    <string name="movieTitle2">"The Dark Knight"</string>
    <string name="movieTitle3">"Pulp Fiction"</string>
    <string name="movieTitle4">"Schindler's List"</string>
    <string name="movieTitle5">"Fight Club"</string>
</resources>
