<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.what_to_watch.BrowseActivity"
    android:background="#266cc1">

    <TextView
        android:id="@+id/textImdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imdb"
        android:textSize="26sp"
        android:textColor="#ffffff"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/movie1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/godfather"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.253" />

    <ImageView
        android:id="@+id/movie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/darkknight"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/movie1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.253" />

    <ImageView
        android:id="@+id/movie3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pulpfiction"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/movie2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.253" />

    <ImageView
        android:id="@+id/movie4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/schindlerslist"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/movie3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.253" />

    <ImageView
        android:id="@+id/movie5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fightclub"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/movie4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.193"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.253" />

    <TextView
        android:id="@+id/movieTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieTitle1"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/movie1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textImdb" />

    <TextView
        android:id="@+id/movieTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieTitle2"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle1"
        app:layout_constraintLeft_toRightOf="@+id/movie2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.415" />

    <TextView
        android:id="@+id/movieTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieTitle3"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/movie3"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle2"
        app:layout_constraintHorizontal_bias="0.422" />

    <TextView
        android:id="@+id/movieTitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieTitle4"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/movie4"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        android:layout_marginTop="73dp"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle3" />

    <TextView
        android:id="@+id/movieTile5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieTitle5"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/movie5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle4"
        app:layout_constraintHorizontal_bias="0.422" />


</android.support.constraint.ConstraintLayout>
